[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = "hexlet-django-blog"
authors = ["Tim Volkov <volkov.timm@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
